syntax = "proto3";

package com.avast.clients.rabbitmq.test;

message FileSource {
    bytes file_id = 1;
    string source = 2;
}

message NewFileSourceAdded {
    repeated FileSource file_sources = 1;
}
